--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>portfolio</title>
 </head>
 
@@ -47,7 +47,6 @@
                     <img fetchpriority="high" src="assets/img/astronauta.webp" fetchpriority="auto" alt="Welcome">
                 </picture>
             </div>
-
             <div id="cielo"><img fetchpriority="high" alt="sky" src="assets/img/sky.png">
             </div>
         </div>
