--- a/save/port.html
+++ b/save/port.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="assets/css/style1.css">
+    <link rel="stylesheet" href="./../assets/css/style1.css">
     <title>portfolio</title>
 </head>
 
@@ -13,7 +13,7 @@
     <div id="loading">
         <div>
             <div class="logo_loading">
-                <div><img alt="jinah_portfolio" src="assets/svg/logo.svg"></div>
+                <div><img alt="jinah_portfolio" src="./../assets/svg/logo.svg"></div>
             </div>
         </div>
     </div>
@@ -1111,14 +1111,14 @@
         </div>
     </main>
 
-    <script src="assets/js/barba.js"></script>
+    <script src="./../assets/js/barba.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <link rel="stylesheet" href="assets/css/splitting.css" />
-    <link rel="stylesheet" href="assets/css/splitting-cells.css" />
-    <script src="assets/js/splitting.min.js"></script>
-    <script src="assets/js/locomotive-scroll.min.js"></script>
-    <script src="assets/js/setup.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="./../assets/css/splitting.css" />
+    <link rel="stylesheet" href="./../assets/css/splitting-cells.css" />
+    <script src="./../assets/js/splitting.min.js"></script>
+    <script src="./../assets/js/locomotive-scroll.min.js"></script>
+    <script src="./../assets/js/setup.js" type="text/javascript"></script>
     <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="5aa14a5d-bc1b-4377-8116-b14da6ac143a"
         data-blockingmode="auto" type="text/javascript"></script>
 
