--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img fetchpriority="high" src="assets/img/astronauta.webp" fetchpriority="auto" alt="Welcome">
                 </picture>
             </div>
-            <div id="cielo"><img fetchpriority="high" alt="sky" src="assets/img/sky.png">
+            <div id="cielo"><img fetchpriority="high" alt="sky" src="./assets/img/sky.png">
             </div>
         </div>
         <div class="main__inner container">
