--- a/save/port.html
+++ b/save/port.html
@@ -200,12 +200,13 @@
                                             <picture>
                                                 <source srcset="assets/img/astronauta.webp" type="image/webp">
                                                 <source srcset="img/astronauta.png" type="image/png">
-                                                <img fetchpriority="high" src="assets/img/astronauta.webp"
+                                                <img fetchpriority="high" src="./../assets/img/astronauta.webp"
                                                     fetchpriority="auto" alt="Welcome">
                                             </picture>
                                         </div>
 
-                                        <div id="cielo"><img fetchpriority="high" alt="sky" src="assets/img/sky.png">
+                                        <div id="cielo"><img fetchpriority="high" alt="sky"
+                                                src="./../assets/img/sky.png">
                                         </div>
 
                                     </div>
@@ -272,25 +273,26 @@
                                         <source srcset="img/missile_basso.webp" type="image/webp">
                                         <source srcset="img/missile_basso.png" type="image/png">
                                         <img fetchpriority="low" alt="Poster design for social"
-                                            src="img/missile_basso.webp">
+                                            src="./../img/missile_basso.webp">
                                     </picture>
 
                                     <picture id="fiori">
                                         <source srcset="img/fiori.webp" type="image/webp">
                                         <source srcset="img/fiori.png" type="image/png">
-                                        <img fetchpriority="low" alt="picture" src="img/fiori.webp">
+                                        <img fetchpriority="low" alt="picture" src="./../img/fiori.webp">
                                     </picture>
 
                                     <picture id="buco">
                                         <source srcset="img/buco.webp" type="image/webp">
                                         <source srcset="img/buco.png" type="image/png">
-                                        <img fetchpriority="low" alt="picture" src="img/buco.webp">
+                                        <img fetchpriority="low" alt="picture" src="./../img/buco.webp">
                                     </picture>
 
                                     <picture id="bomba_t">
                                         <source srcset="img/missile_alto.webp" type="image/webp">
                                         <source srcset="img/missile_alto.png" type="image/png">
-                                        <img fetchpriority="low" alt="Design for peace" src="img/missile_alto.webp">
+                                        <img fetchpriority="low" alt="Design for peace"
+                                            src="./../img/missile_alto.webp">
                                     </picture>
                                 </div>
 
