--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <div id="sfondo_black"></div>
             <div id="astronauta">
                 <picture>
-                    <img fetchpriority="high" src="assets/img/astronauta.webp" fetchpriority="auto" alt="Welcome">
+                    <img fetchpriority="high" src="./assets/img/astronauta.webp" fetchpriority="auto" alt="Welcome">
                 </picture>
             </div>
             <div id="cielo"><img fetchpriority="high" alt="sky" src="./assets/img/sky.png">
