--- a/test/index.html
+++ b/test/index.html
@@ -57,7 +57,7 @@
                 <!-- <div id="sky" class="main__img">
                     <div id="eye" class="main__eye"></div>
                 </div> -->
-                <!-- <div class="main__first">
+                <div class="main__first">
                     <div class="first__text">
                         <ul>
                             <li>
@@ -109,7 +109,7 @@
                 </div>
                 <div class="main__sec">
 
-                </div> -->
+                </div>
             </div>
         </div>
     </main>
