--- a/save/port.html
+++ b/save/port.html
@@ -198,9 +198,9 @@
 
                                         <div id="astronauta">
                                             <picture>
-                                                <source srcset="assets/img/astronauta.webp" type="image/webp">
+                                                <source srcset="./../assets/img/astronauta.webp" type="image/webp">
                                                 <source srcset="img/astronauta.png" type="image/png">
-                                                <img fetchpriority="high" src="./../assets/img/astronauta.webp"
+                                                <img fetchpriority="high" src="./../assets/img/eye-min.png"
                                                     fetchpriority="auto" alt="Welcome">
                                             </picture>
                                         </div>
@@ -1113,11 +1113,11 @@
         </div>
     </main>
 
+    <link rel="stylesheet" href="./../assets/css/splitting.css" />
+    <link rel="stylesheet" href="./../assets/css/splitting-cells.css" />
     <script src="./../assets/js/barba.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.4.2/ScrollTrigger.min.js"></script>
-    <link rel="stylesheet" href="./../assets/css/splitting.css" />
-    <link rel="stylesheet" href="./../assets/css/splitting-cells.css" />
     <script src="./../assets/js/splitting.min.js"></script>
     <script src="./../assets/js/locomotive-scroll.min.js"></script>
     <script src="./../assets/js/setup.js" type="text/javascript"></script>
