--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 
         const anim2 = gsap.timeline();
 
-        gsap.utils.toArray(".word").forEach(item => {
+        gsap.utils.toArray("p").forEach(item => {
             anim2.fromTo(item, {
                 opacity: 0.1,
             }, {
@@ -261,21 +261,28 @@
                 }
             })
         });
-        gsap.utils.toArray(".img").forEach(item => {
-            anim2.fromTo(item, {
-                width: 0,
-            }, {
-                width: "100%",
-                ease: "none",
-                delay: 2,
-                scrollTrigger: {
-                    trigger: item,
-                    start: "bottom center",
-                    end: "bottom top",
-                    scrub: 1,
-                }
-            })
+
+        // GSAP와 ScrollTrigger를 활성화합니다.
+        // gsap.registerPlugin(ScrollTrigger);
+
+        // 타임라인을 생성합니다.
+        const sec2img = gsap.timeline({
+            paused: true,
+            defaults: { ease: "sine.inOut", duration: 0.4 },
+            scrollTrigger: {
+                trigger: ".sec2__text", // 트리거 요소 설정
+                start: "top center", // 애니메이션 시작 지점
+                end: "bottom center", // 애니메이션 종료 지점
+                scrub: true, // 스크롤에 따라 애니메이션이 자연스럽게 진행됨
+                toggleActions: "play reverse play reverse" // 스크롤 방향에 따라 애니메이션을 재생 및 역재생
+            }
         });
+
+        // 모든 이미지의 transformOrigin을 설정합니다.
+        sec2img.set(".img", { transformOrigin: 'left' });
+
+        // 이미지가 왼쪽에서 오른쪽으로 펼쳐지도록 설정합니다.
+        sec2img.fromTo(".img", { scaleX: 0 }, { scaleX: 1 }, 0);
 
         // gsap.utils.toArray('.sec2__text>ul>li>p').forEach(p => {
         //     gsap.fromTo(p, {
