--- a/test/portfolio.html
+++ b/test/portfolio.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 
-    <link rel="stylesheet" href="./assets/css/reset1.css">
-    <link rel="stylesheet" href="./assets/css/port.css">
+    <link rel="stylesheet" href="../../assets/css/reset1.css">
+    <link rel="stylesheet" href="../../assets/css/port.css">
 </head>
 
 <body>
